# fastapi_jwt_auth_example

./: .env.example  .gitignore  README.md  db.py  db_init.py  main.py  models.py  pyproject.toml
routes/: __init__.py  auth.py  auth_utils.py  employees.py  logout.py  refresh.py  register.py  users.py
static/html/: 404.html  index.html
test/: auth_test.py  employees_test.py  logout_test.py  refresh_test.py  register_test.py  run_auth_tests.py  run_employees_tests.py  run_logout_tests.py  run_refresh_tests.py  run_register_tests.py  run_users_tests.py  users_test.py
